assets/css/cfb-pickem/pickem.css
#picks-nav {
    display: flex;
    flex-direction: column;
    align-items: center;
}
select {
    border: none;
    border-radius: 5px;
    padding: 3px 10px;
}
#user-select {
    background-color: #474642;
    color: #FFFFFF;
    margin-bottom: 10px;
}
#week-select {
    font-size: medium;
    height: 35px;
    width: 200px;
}


#deadline-warning {
    font-size: medium;
    padding-top: 25px;
}

#picks-body {
    font-size: small;
    font-weight: 300;
    margin-top: 25px;
}


.logo {
    position: relative;
    display: inline-block;
    cursor: pointer;
}
.logo .tooltip {
    visibility: hidden;
    width: 120px;
    background-color: black;
    color: #fff;
    text-align: center;
    border-radius: 5px;
    padding: 5px 0;
    opacity: 0;
    transition: opacity 0.3s;
    position: absolute;
    top: -20px;
}
.away-team-logo .tooltip {
    left: 55px;
}
.home-team-logo .tooltip {
    right: 55px;
}
.logo:hover .tooltip {
    visibility: visible;
    opacity: 1;
}

#picks-table tr {
    height: 30px;
}
.selection-div {
    border-radius: 30px;
}
.selection-text {
    text-align: center;
    width: 125px;
}
.away-radio {
    float: left;
    margin-left: 1px;
}
.home-radio {
    float: right;
}


.info-cell span {
    margin: 0 auto;
}
.info-cell {
    position: relative;
    display: inline-block;
    cursor: pointer;
}
.info-cell .tooltip {
    visibility: hidden;
    width: 120px;
    background-color: black;
    color: #fff;
    text-align: center;
    border-radius: 5px;
    padding: 5px 0;
    opacity: 0;
    transition: opacity 0.3s;
    position: absolute;
    right: 80px;
    top: -25px;
}
.info-cell:hover .tooltip {
    visibility: visible;
    opacity: 1;
}


img {
    height: 25px;
}


#save-picks {
    font-size: medium;
    margin-top: 20px;
    margin-bottom: 25px;
}

#leaderboard-body {
    margin-top: 15px;
    text-align: center;
}

#leaderboard-body span{
    font-size: medium;
}

#leaderboard-body span{
    font-size: medium;
}

#leaderboard-body tr {
    text-align: right;
}

/*
#success-modal {
    background-color: #f4eed7;
    border-radius: 20px;
    color: #000000;
    font-size: smaller;
    text-align: center;
}
#modal-close {
    margin-bottom: 5px;
}*/

